--- a/evaluation/IMDB_BERT_BL_eval.ipynb
+++ b/evaluation/IMDB_BERT_BL_eval.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "c7d8772c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "republican-arthritis",
    "metadata": {
     "tags": []
@@ -12,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Jakob\\AppData\\Local\\Temp\\ipykernel_11116\\589143493.py:7: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "C:\\Users\\Andersen\\AppData\\Local\\Temp\\ipykernel_356\\589143493.py:7: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
       "  plt.style.use('seaborn-whitegrid')\n"
      ]
     }
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "understanding-suicide",
    "metadata": {
     "tags": []
@@ -211,11 +219,437 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "13f520cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_stats2(dfs, average='binary'):\n",
+    "    f1_ss = []\n",
+    "    auc_roc_ss = []\n",
+    "    pr_true_ss = []\n",
+    "    pr_false_ss = []\n",
+    "    mean_true_ss = []\n",
+    "    mean_false_ss = []\n",
+    "    detection_error = []\n",
+    "\n",
+    "    for df in dfs:\n",
+    "        f1 = f1_score(df['y_hat'], df['y'], average=average)\n",
+    "        f1_ss.append(f1)\n",
+    "\n",
+    "        d_r_ss = detectionError(df)\n",
+    "        detection_error.append(d_r_ss)\n",
+    "\n",
+    "        auc_roc = roc_auc_score(df['c_true'], df['p'], average=average)\n",
+    "        auc_roc_ss.append(auc_roc)\n",
+    "\n",
+    "        tmp = df[df['defect'] == False]\n",
+    "\n",
+    "        pr = average_precision_score(df['c_true'], df['p'], average=average)\n",
+    "        pr_true_ss.append(pr)\n",
+    "\n",
+    "        mean_true = tmp['p'].mean()\n",
+    "        mean_true_ss.append(mean_true)\n",
+    "\n",
+    "        tmp = df[df['defect']]\n",
+    "\n",
+    "        pr = average_precision_score(df['c_false'], -1*df['p'], average=average)\n",
+    "        pr_false_ss.append(pr)\n",
+    "\n",
+    "        mean_false = tmp['p'].mean()\n",
+    "        mean_false_ss.append(mean_false)\n",
+    "\n",
+    "    def r3(n, r=1):\n",
+    "        return round(n * 100, r) \n",
+    "\n",
+    "    print('F1', r3(np.array(f1_ss).mean(), 3), r3(np.array(f1_ss).std()))\n",
+    "    print('Detection Error', r3(np.array(detection_error).mean()), r3(np.array(detection_error).std()))\n",
+    "    print()\n",
+    "    print('AUC_ROC', r3(np.array(auc_roc_ss).mean()), r3(np.array(auc_roc_ss).std()))\n",
+    "    print('AUC_PR_True', r3(np.array(pr_true_ss).mean()), r3(np.array(pr_true_ss).std()))\n",
+    "    print('AUC_PR_False', r3(np.array(pr_false_ss).mean()), r3(np.array(pr_false_ss).std()))\n",
+    "    print()\n",
+    "    print('MEAN PROB True', r3(np.array(mean_true_ss).mean()), r3(np.array(mean_true_ss).std()))\n",
+    "    print('MEAN PROB False', r3(np.array(mean_false_ss).mean()), r3(np.array(mean_false_ss).std()))\n",
+    "    print('MEAN PROB Range', r3(np.array(mean_true_ss).mean())-r3(np.array(mean_false_ss).mean()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "9c1a4d94-48ac-4de3-8571-40b1f6482025",
    "metadata": {
     "tags": []
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 93.672 0.1\n",
+      "Detection Error 6.3 0.1\n",
+      "\n",
+      "AUC_ROC 88.7 0.4\n",
+      "AUC_PR_True 99.1 0.1\n",
+      "AUC_PR_False 35.0 0.7\n",
+      "\n",
+      "MEAN PROB True 98.2 0.3\n",
+      "MEAN PROB False 85.7 1.1\n",
+      "MEAN PROB Range 12.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics import roc_auc_score, average_precision_score, f1_score, precision_score, recall_score, accuracy_score\n",
+    "\n",
+    "\n",
+    "# print stats\n",
+    "print_stats2(dfs, average='micro')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f05e13d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = dfs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "101279cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y_hat</th>\n",
+       "      <th>p_0</th>\n",
+       "      <th>p_1</th>\n",
+       "      <th>p</th>\n",
+       "      <th>y</th>\n",
+       "      <th>defect</th>\n",
+       "      <th>c_false</th>\n",
+       "      <th>p_defect</th>\n",
+       "      <th>c_true</th>\n",
+       "      <th>p_correct</th>\n",
+       "      <th>u_lc</th>\n",
+       "      <th>u_hm</th>\n",
+       "      <th>u_e</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>749</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.498802</td>\n",
+       "      <td>0.501198</td>\n",
+       "      <td>0.501198</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.498802</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.498802</td>\n",
+       "      <td>0.498802</td>\n",
+       "      <td>0.997604</td>\n",
+       "      <td>0.999996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8878</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.503250</td>\n",
+       "      <td>0.496750</td>\n",
+       "      <td>0.503250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.503250</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.503250</td>\n",
+       "      <td>0.496750</td>\n",
+       "      <td>0.993499</td>\n",
+       "      <td>0.999970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11554</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.503756</td>\n",
+       "      <td>0.496244</td>\n",
+       "      <td>0.503756</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.503756</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.503756</td>\n",
+       "      <td>0.496244</td>\n",
+       "      <td>0.992488</td>\n",
+       "      <td>0.999959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3189</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.503900</td>\n",
+       "      <td>0.496100</td>\n",
+       "      <td>0.503900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.503900</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.503900</td>\n",
+       "      <td>0.496100</td>\n",
+       "      <td>0.992199</td>\n",
+       "      <td>0.999956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3880</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.495892</td>\n",
+       "      <td>0.504108</td>\n",
+       "      <td>0.504108</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.495892</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.495892</td>\n",
+       "      <td>0.495892</td>\n",
+       "      <td>0.991784</td>\n",
+       "      <td>0.999951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6075</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.999116</td>\n",
+       "      <td>0.000884</td>\n",
+       "      <td>0.999116</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.999116</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.999116</td>\n",
+       "      <td>0.000884</td>\n",
+       "      <td>0.001769</td>\n",
+       "      <td>0.010246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5791</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.999116</td>\n",
+       "      <td>0.000884</td>\n",
+       "      <td>0.999116</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.999116</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.999116</td>\n",
+       "      <td>0.000884</td>\n",
+       "      <td>0.001768</td>\n",
+       "      <td>0.010242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11044</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.999116</td>\n",
+       "      <td>0.000884</td>\n",
+       "      <td>0.999116</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.999116</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.999116</td>\n",
+       "      <td>0.000884</td>\n",
+       "      <td>0.001767</td>\n",
+       "      <td>0.010238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5088</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.999121</td>\n",
+       "      <td>0.000879</td>\n",
+       "      <td>0.999121</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.999121</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.999121</td>\n",
+       "      <td>0.000879</td>\n",
+       "      <td>0.001758</td>\n",
+       "      <td>0.010189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>235</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.999123</td>\n",
+       "      <td>0.000877</td>\n",
+       "      <td>0.999123</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.999123</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.999123</td>\n",
+       "      <td>0.000877</td>\n",
+       "      <td>0.001754</td>\n",
+       "      <td>0.010169</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12500 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       y_hat       p_0       p_1         p  y  defect  c_false  p_defect  \\\n",
+       "749        0  0.498802  0.501198  0.501198  1    True        1 -0.498802   \n",
+       "8878       0  0.503250  0.496750  0.503250  0   False        0 -0.503250   \n",
+       "11554      0  0.503756  0.496244  0.503756  0   False        0 -0.503756   \n",
+       "3189       0  0.503900  0.496100  0.503900  0   False        0 -0.503900   \n",
+       "3880       0  0.495892  0.504108  0.504108  1    True        1 -0.495892   \n",
+       "...      ...       ...       ...       ... ..     ...      ...       ...   \n",
+       "6075       0  0.999116  0.000884  0.999116  0   False        0 -0.999116   \n",
+       "5791       0  0.999116  0.000884  0.999116  0   False        0 -0.999116   \n",
+       "11044      0  0.999116  0.000884  0.999116  0   False        0 -0.999116   \n",
+       "5088       0  0.999121  0.000879  0.999121  0   False        0 -0.999121   \n",
+       "235        0  0.999123  0.000877  0.999123  0   False        0 -0.999123   \n",
+       "\n",
+       "       c_true  p_correct      u_lc      u_hm       u_e  \n",
+       "749         0   0.498802  0.498802  0.997604  0.999996  \n",
+       "8878        1   0.503250  0.496750  0.993499  0.999970  \n",
+       "11554       1   0.503756  0.496244  0.992488  0.999959  \n",
+       "3189        1   0.503900  0.496100  0.992199  0.999956  \n",
+       "3880        0   0.495892  0.495892  0.991784  0.999951  \n",
+       "...       ...        ...       ...       ...       ...  \n",
+       "6075        1   0.999116  0.000884  0.001769  0.010246  \n",
+       "5791        1   0.999116  0.000884  0.001768  0.010242  \n",
+       "11044       1   0.999116  0.000884  0.001767  0.010238  \n",
+       "5088        1   0.999121  0.000879  0.001758  0.010189  \n",
+       "235         1   0.999123  0.000877  0.001754  0.010169  \n",
+       "\n",
+       "[12500 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sort = df.sort_values(by=['u_lc'], ascending=False)\n",
+    "df_sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cd4f42d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "5ef34c70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.93576"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "manual_effort = 0\n",
+    "\n",
+    "manual_amount = int(len(df['y']) * manual_effort)\n",
+    "\n",
+    "print(manual_amount)\n",
+    "\n",
+    "f1_score(pd.concat([df_sort['y'][:manual_amount], df_sort['y_hat'][manual_amount:]]).values, df_sort['y'].values, average='micro')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "471fc231",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.93576"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f1_score(df['y_hat'], df['y'], average='micro')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25798284",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -236,7 +670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
