--- a/evaluation/IMDB_BERT_BL_eval.ipynb
+++ b/evaluation/IMDB_BERT_BL_eval.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "republican-arthritis",
    "metadata": {
     "tags": []
@@ -20,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Andersen\\AppData\\Local\\Temp\\ipykernel_356\\589143493.py:7: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "C:\\Users\\Andersen\\AppData\\Local\\Temp\\ipykernel_37456\\589143493.py:7: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
       "  plt.style.use('seaborn-whitegrid')\n"
      ]
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "local-hopkins",
    "metadata": {
     "tags": []
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "13f520cf",
+   "id": "134cd0db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,8 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "f05e13d6",
+   "execution_count": 7,
+   "id": "01dadd83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,8 +320,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "101279cb",
+   "execution_count": 8,
+   "id": "4d0250d7",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "[12500 rows x 13 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,16 +584,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5cd4f42d",
+   "execution_count": 10,
+   "id": "3ab5bfe1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import roc_auc_score, average_precision_score, f1_score, precision_score, recall_score, accuracy_score"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "5ef34c70",
+   "execution_count": 11,
+   "id": "9be14604",
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +611,7 @@
        "0.93576"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,8 +628,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "471fc231",
+   "execution_count": 12,
+   "id": "19460b0f",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +638,7 @@
        "0.93576"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,8 +649,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "id": "cfdefcb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "d9d940c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 1\n",
+    "\n",
+    "\n",
+    "random_number = random.randint(0, k)\n",
+    "print(random_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "33c507c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3706535880.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[55], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    for in in range(10):\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = 0.1\n",
+    "\n",
+    "for in in range(10):\n",
+    "    s = [random.randint(0, k) if random.random() < p else v for _, v in enumerate(s)]\n",
+    "    print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "25798284",
+   "id": "ae7bbb51",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5129e96",
    "metadata": {},
    "outputs": [],
    "source": []
