--- a/evaluation/IMDB_BERT_BL_eval.ipynb
+++ b/evaluation/IMDB_BERT_BL_eval.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "republican-arthritis",
    "metadata": {
     "tags": []
@@ -20,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Andersen\\AppData\\Local\\Temp\\ipykernel_37456\\589143493.py:7: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "C:\\Users\\Jakob\\AppData\\Local\\Temp\\ipykernel_4040\\589143493.py:7: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
       "  plt.style.use('seaborn-whitegrid')\n"
      ]
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "local-hopkins",
    "metadata": {
     "tags": []
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "understanding-suicide",
    "metadata": {
     "tags": []
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "01dadd83",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "4d0250d7",
    "metadata": {},
    "outputs": [
@@ -572,7 +572,7 @@
        "[12500 rows x 13 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "3ab5bfe1",
    "metadata": {},
    "outputs": [],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "9be14604",
    "metadata": {},
    "outputs": [
@@ -611,7 +611,7 @@
        "0.93576"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "19460b0f",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
        "0.93576"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "cfdefcb4",
    "metadata": {},
    "outputs": [],
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "d9d940c7",
    "metadata": {},
    "outputs": [
@@ -682,39 +682,344 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "id": "33c507c0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3706535880.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[55], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    for in in range(10):\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1]\n"
      ]
     }
    ],
    "source": [
-    "p = 0.1\n",
-    "\n",
-    "for in in range(10):\n",
-    "    s = [random.randint(0, k) if random.random() < p else v for _, v in enumerate(s)]\n",
-    "    print(s)"
+    "p = .1\n",
+    "for i in range(10):\n",
+    "    r = [random.randint(0, k) if random.random() < p else v for _, v in enumerate(s)]\n",
+    "    print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "ed6e30b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len( [random.randint(0, k) if random.random() < p else v for _, v in enumerate(s)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "ae7bbb51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"rand_mod\"] = [random.randint(0, k) if random.random() < 1 else v for _, v in enumerate(df[\"y_hat\"])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "d5129e96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y_hat</th>\n",
+       "      <th>p_0</th>\n",
+       "      <th>p_1</th>\n",
+       "      <th>p</th>\n",
+       "      <th>y</th>\n",
+       "      <th>defect</th>\n",
+       "      <th>c_false</th>\n",
+       "      <th>p_defect</th>\n",
+       "      <th>c_true</th>\n",
+       "      <th>p_correct</th>\n",
+       "      <th>u_lc</th>\n",
+       "      <th>u_hm</th>\n",
+       "      <th>u_e</th>\n",
+       "      <th>rand_mod</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.002857</td>\n",
+       "      <td>0.997143</td>\n",
+       "      <td>0.997143</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.997143</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.997143</td>\n",
+       "      <td>0.002857</td>\n",
+       "      <td>0.005715</td>\n",
+       "      <td>0.028263</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.999032</td>\n",
+       "      <td>0.000968</td>\n",
+       "      <td>0.999032</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.999032</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.999032</td>\n",
+       "      <td>0.000968</td>\n",
+       "      <td>0.001936</td>\n",
+       "      <td>0.011090</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.002013</td>\n",
+       "      <td>0.997987</td>\n",
+       "      <td>0.997987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.997987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.997987</td>\n",
+       "      <td>0.002013</td>\n",
+       "      <td>0.004026</td>\n",
+       "      <td>0.020933</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.998931</td>\n",
+       "      <td>0.001069</td>\n",
+       "      <td>0.998931</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.998931</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.998931</td>\n",
+       "      <td>0.001069</td>\n",
+       "      <td>0.002137</td>\n",
+       "      <td>0.012089</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.001464</td>\n",
+       "      <td>0.998536</td>\n",
+       "      <td>0.998536</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.998536</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.998536</td>\n",
+       "      <td>0.001464</td>\n",
+       "      <td>0.002929</td>\n",
+       "      <td>0.015899</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12495</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.998677</td>\n",
+       "      <td>0.001323</td>\n",
+       "      <td>0.998677</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.998677</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.998677</td>\n",
+       "      <td>0.001323</td>\n",
+       "      <td>0.002646</td>\n",
+       "      <td>0.014556</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12496</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.014501</td>\n",
+       "      <td>0.985500</td>\n",
+       "      <td>0.985500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.985500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.985500</td>\n",
+       "      <td>0.014500</td>\n",
+       "      <td>0.029001</td>\n",
+       "      <td>0.109333</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12497</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.989291</td>\n",
+       "      <td>0.010709</td>\n",
+       "      <td>0.989291</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.989291</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.989291</td>\n",
+       "      <td>0.010709</td>\n",
+       "      <td>0.021418</td>\n",
+       "      <td>0.085458</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12498</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.001530</td>\n",
+       "      <td>0.998470</td>\n",
+       "      <td>0.998470</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.998470</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.998470</td>\n",
+       "      <td>0.001530</td>\n",
+       "      <td>0.003061</td>\n",
+       "      <td>0.016518</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12499</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.943015</td>\n",
+       "      <td>0.056985</td>\n",
+       "      <td>0.943015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.056985</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.056985</td>\n",
+       "      <td>0.056985</td>\n",
+       "      <td>0.113970</td>\n",
+       "      <td>0.315358</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12500 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       y_hat       p_0       p_1         p  y  defect  c_false  p_defect  \\\n",
+       "0          1  0.002857  0.997143  0.997143  1   False        0 -0.997143   \n",
+       "1          0  0.999032  0.000968  0.999032  0   False        0 -0.999032   \n",
+       "2          1  0.002013  0.997987  0.997987  1   False        0 -0.997987   \n",
+       "3          0  0.998931  0.001069  0.998931  0   False        0 -0.998931   \n",
+       "4          1  0.001464  0.998536  0.998536  1   False        0 -0.998536   \n",
+       "...      ...       ...       ...       ... ..     ...      ...       ...   \n",
+       "12495      0  0.998677  0.001323  0.998677  0   False        0 -0.998677   \n",
+       "12496      1  0.014501  0.985500  0.985500  1   False        0 -0.985500   \n",
+       "12497      0  0.989291  0.010709  0.989291  0   False        0 -0.989291   \n",
+       "12498      1  0.001530  0.998470  0.998470  1   False        0 -0.998470   \n",
+       "12499      1  0.943015  0.056985  0.943015  0    True        1 -0.056985   \n",
+       "\n",
+       "       c_true  p_correct      u_lc      u_hm       u_e  rand_mod  \n",
+       "0           1   0.997143  0.002857  0.005715  0.028263         0  \n",
+       "1           1   0.999032  0.000968  0.001936  0.011090         1  \n",
+       "2           1   0.997987  0.002013  0.004026  0.020933         1  \n",
+       "3           1   0.998931  0.001069  0.002137  0.012089         1  \n",
+       "4           1   0.998536  0.001464  0.002929  0.015899         0  \n",
+       "...       ...        ...       ...       ...       ...       ...  \n",
+       "12495       1   0.998677  0.001323  0.002646  0.014556         1  \n",
+       "12496       1   0.985500  0.014500  0.029001  0.109333         0  \n",
+       "12497       1   0.989291  0.010709  0.021418  0.085458         1  \n",
+       "12498       1   0.998470  0.001530  0.003061  0.016518         1  \n",
+       "12499       0   0.056985  0.056985  0.113970  0.315358         0  \n",
+       "\n",
+       "[12500 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae7bbb51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5129e96",
+   "id": "3c92d33e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -736,7 +1041,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
